--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+:root{
+  --para-color: rgb(25, 10, 40);
+  --green-link: rgb(31, 130, 104);
+}
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +23,47 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* Universal Classes */
+.font-600{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  font-size: .9rem;
+}
+
+.downarrow {
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  aspect-ratio: 1/1;
+  height: .5rem;
+  transform: rotate(45deg);
+  margin-right: .5rem;
+  margin-bottom: .15rem;
+}
+
+.border-grey {
+  border: 1px solid rgb(228, 228, 228);
+  border-radius: 0.75rem;
+}
+
+.heading {
+  color: rgb(25, 10, 40);
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0.0025em;
+}
+
+.para{
+  color: rgb(25, 10, 40, .9);
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.flex{
+  display: flex;
 }
