--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -86,6 +86,8 @@ section{
 }
 .profile-view .link-container .link-url .link-icon {
     flex-shrink: 0;
+    width: 1.1rem;
+    height: 1.1rem;
 }
 
 
