--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -22,7 +22,6 @@
 /* ---------------- Section ---------------- */
 main{
     background-color: var(--bg-grey);
-    height: 200vh;
 }
 section{
     display: grid;
@@ -150,6 +149,7 @@ section{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding-bottom: 50px;
 }
 
 /* WORK-EXPERIENCE */
@@ -171,16 +171,18 @@ section{
     margin-right: 8px;
 }
 
+.education > .para {
+    margin-top: -0.75rem;
+    margin-bottom: 1rem;
+}
+.education .boxbox p{
+    margin: 0 8px;
+}
+
 /* RESUME */
 .resume > .para {
     margin-top: -0.75rem;
     margin-bottom: 1rem;
-}
-.resume > .boxbox {
-    flex-direction: column;
-    align-items: baseline;
-    justify-content: flex-start;
-    margin: 8px 0px;
 }
 .resume > .boxbox p{
     margin: 0 8px;
@@ -190,12 +192,6 @@ section{
 .other-details > .para {
     margin-top: -0.75rem;
     margin-bottom: 1rem;
-}
-.other-details > .boxbox {
-    flex-direction: column;
-    align-items: baseline;
-    justify-content: flex-start;
-    margin: 8px 0px;
 }
 .other-details .boxbox p{
     margin: 0 8px;
@@ -262,6 +258,16 @@ section{
     width: 37vw;
     padding: var(--twe-px);
 }
+.boxbox-2 {
+    background-color: var(--bg-white);
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    justify-content: flex-start;
+    width: 37vw;
+    padding: var(--twe-px);
+    margin: 8px 0px;
+}
 .green-adder-box {
     border-radius: 4px;
     border: 1px solid var(--green-link);
@@ -276,4 +282,5 @@ section{
     margin-top: 15px;
     cursor: pointer;
     width: 100%;
+    gap: 8px;
 }
