--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -55,10 +55,15 @@ nav.sticky {
     cursor: pointer;
 }
 
-/* Header-Profile */
-.profile-btn .btn-container {
+/* Header-Profile-Btn */ /* Csutom-Select-Button */ /* navbar-Dropdown */
+.profile-btn {
+    position: relative;
+    user-select: none;
+}
+.profile-btn .custom-select-btn {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     border: 1px solid rgba(204, 204, 204, 0.6);
     border-radius: 42px;
     padding: .19rem;
@@ -66,8 +71,33 @@ nav.sticky {
     background-color: #fff;
     cursor: pointer;
 }
-.profile-btn .btn-container img {
+.profile-btn .custom-select-btn img {
     aspect-ratio: 1/1;
     height: 2.2rem;
     border-radius: 50%;
+}
+.profile-btn .custom-select-content {
+    position: absolute;
+    align-items: flex-start;
+    background-color: #fff;
+    border-radius: 1.5rem;
+    top: 110%;
+    right: 0;
+    padding: 20px 20px 20px 20px;
+    width: 10rem;
+    gap: 1rem;
+}
+.custom-select-item {
+    cursor: pointer;
+}
+.custom-select-item:first-child {
+    margin-left: 0.2rem;
+}
+.custom-select-item .btn-txt {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    color: rgb(25, 10, 40);
+    cursor: pointer;
+    margin-left: 10px;
 }
